# crispr-design-studio

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
crispr_design/: __init__.py  cli.py
crispr_design.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
crispr_design/api/: server.py
crispr_design/core/: __init__.py  design.py  grna.py  off_target.py  scoring.py
crispr_design/databases/: __init__.py  genome.py
crispr_design/reports/: csv_report.py  html_report.py  json_report.py
crispr_design/reports/templates/: report.html
crispr_design/utils/: seq_utils.py
crispr_design/web/: index.html
crispr_design/web/static/: app.js  styles.css
graphify-out/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
tests/: conftest.py  test_api.py  test_cli.py  test_design.py  test_genome.py  test_grna.py  test_off_target.py  test_reports.py  test_scoring.py  test_seq_utils.py
