[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crispr-design"
version = "0.1.0.dev1"
description = "CRISPR Design Studio — CLI + web tool for gRNA design and off-target prediction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "CRISPR Design Studio Contributors"},
]
keywords = ["crispr", "gRNA", "off-target", "genome-editing", "cas9", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "biopython>=1.81",
    "jinja2>=3.1",
    "polars>=0.20",
    "tabulate>=0.9",
    "click>=8.1",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "black>=23.0",
    "ruff>=0.1",
]
api = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic[email]>=2.0",
]

[project.scripts]
crispr-design = "crispr_design.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["crispr_design*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.black]
line-length = 120
target-version = ["py311"]
